--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
-body {
-  overflow-y: scroll;
-  overflow-x: hidden;
+:root {
+  --linkedinBlueColor: #0a66c2;
 }
 
 root,
@@ -18,4 +17,15 @@ html {
   font-size: 1rem;
   vertical-align: baseline;
   background: transparent;
+}
+
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
