--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ root,
 body,
 html {
   background-color: #f5f5f5;
-  box-sizing: border-box;
 }
 
 * {
@@ -17,6 +16,7 @@ html {
   font-size: 1rem;
   vertical-align: baseline;
   background: transparent;
+  box-sizing: border-box;
 }
 
 body {
@@ -28,4 +28,8 @@ body {
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
